tests/baselines/reference/genericInferenceContextualTypeAsSignatureWithProperties.errors.txt
tests/cases/compiler/genericInferenceContextualTypeAsSignatureWithProperties.ts(17,15): error TS2345: Argument of type '(arg: 'a' | 'b') => void' is not assignable to parameter of type '(arg: "a" | "b" | "c") => void'.
  Types of parameters 'arg' and 'arg' are incompatible.
    Type '"a" | "b" | "c"' is not assignable to type '"a" | "b"'.
      Type '"c"' is not assignable to type '"a" | "b"'.


==== tests/cases/compiler/genericInferenceContextualTypeAsSignatureWithProperties.ts (1 errors) ====
    // repro from #52262
    
    const inner = <T extends 'a' | 'b' | 'c'>(cb: (arg: T) => void) => {};
    
    interface FuncB<T> {
      (arg: T): void;
      x?: string;
    };
    const outerB = <T,>(func: FuncB<T>, arg: T) => {};
    outerB(inner, (arg: 'a' | 'b') => {});
    
    interface FuncC<T> {
      (arg: T): void;
      x?: T;
    };
    const outerC = <T,>(func: FuncC<T>, arg: T) => {};
    outerC(inner, (arg: 'a' | 'b') => {}); // error
                  ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(arg: 'a' | 'b') => void' is not assignable to parameter of type '(arg: "a" | "b" | "c") => void'.
!!! error TS2345:   Types of parameters 'arg' and 'arg' are incompatible.
!!! error TS2345:     Type '"a" | "b" | "c"' is not assignable to type '"a" | "b"'.
!!! error TS2345:       Type '"c"' is not assignable to type '"a" | "b"'.
    